# pii_filter_rag_chat

./: README.md
aws_pdf_rag_quickstart/: .env  .env.bedrock  .env.ollama  .gitignore  .hadolint.yaml  .pre-commit-config.yaml  .tflint.hcl  Dockerfile  README.md  chainlit.md  chainlit_app.py  docker-compose.yml  docker_test.py  mypy.ini  pyproject.toml  run_streamlit.py  streamlit_app.py  test_pdf_extraction.py  test_streamlit.py
aws_pdf_rag_quickstart/src/aws_rag_quickstart/: AWSAuth.py  AgentLambda.py  IngestionLambda.py  LLM.py  bedrock_llm.py  constants.py  fast_api_wrapper.py  opensearch.py  pii_detector.py
aws_pdf_rag_quickstart/terraform/live/dev/: main.tf  vars.tf
aws_pdf_rag_quickstart/terraform/modules/ecr/: main.tf  vars.tf
aws_pdf_rag_quickstart/terraform/modules/ecs/: main.tf  out.tf  vars.tf
aws_pdf_rag_quickstart/terraform/modules/lambda/: main.tf  out.tf  vars.tf
aws_pdf_rag_quickstart/terraform/modules/opensearch/: main.tf  output.tf  vars.tf
aws_pdf_rag_quickstart/terraform/modules/s3/: main.tf
aws_pdf_rag_quickstart/terraform/modules/vpc/: main.tf  out.tf  vars.tf
aws_pdf_rag_quickstart/terraform/remote-state/: main.tf  vars.tf
aws_pdf_rag_quickstart/tests/: LambdaE2E.py  LambdaE2E_summarizaton.py  perf_test.py  unit_tests.py
