[project]
name = "aws-rag-quickstart"
version = "0.1.0"
description = "Streamlit RAG Chatbot with PII Protection - AWS RAG Quickstart"
authors = [
    {name = "Chris King", email = "cking42976@gmail.com"}
]
readme = "STREAMLIT_README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain>=0.3.4",
    "pdf2image==1.17.0",
    "boto3==1.34.162",
    "langchain-aws>=0.1.0",
    "opensearch-py~=2.7.1",
    "langchain-community>=0.2.17",
    "requests-aws4auth~=1.3.1",
    "python-dotenv~=1.0.1",

    "pypdf2>=3.0.1",
    "langchain-openai>=0.0.8",
    "streamlit>=1.28.0",
    "transformers>=4.36.0",
    "torch>=2.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.3",
    "pytest-mock==3.14.0",
    "pylama==8.4.1",
    "black==24.10.0",
    "isort==5.13.2",
    "setuptools",
    "coverage",
    "pre-commit",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.3",
    "pytest-mock>=3.14.0",
    "pylama>=8.4.1",
    "black>=24.10.0",
    "isort>=5.13.2",
    "coverage",
    "pre-commit",
    "requests>=2.31.0",  # For Docker testing
]
